[package]
name = "any-proxy"
version = "0.1.0"
edition = "2021"
readme = "README.md"
exclude = ["test/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "anyproxy"
path = "src/bin/anyproxy.rs"


[features]
default = ["anyproxy-openssl"]
#default = ["anyproxy-rustls"]
#使用openssl加密
anyproxy-openssl = ["openssl-sys", "openssl", "tokio-openssl"]
#使用rustls加密
anyproxy-rustls = []



[profile.dev]
#incremental = false
debug = true
panic = "unwind"
#opt-level = 0
#split-debuginfo = '...'  # Platform-specific.
#debug-assertions = true
#overflow-checks = true
#lto = false
#incremental = true
#codegen-units = 256
#rpath = false

[profile.release]
debug = false
#debug = true
panic = "abort"
opt-level = 3
#这个特性开起来会导致rpm打包失败， deb正常
#lto = true
lto = false
codegen-units = 1
incremental = false
#性能调试用这个
#debug = true
#删除调试信息
#strip ./target/release/anyproxy

[dependencies]
anyhow = { git = "https://github.com/yefy/anyhow.git", branch = "master" }
awaitgroup = { git = "https://github.com/yefy/awaitgroup.git", branch = "master" }
any-tunnel = { git = "https://github.com/yefy/any-tunnel.git", branch = "main" }
any-tunnel2 = { git = "https://github.com/yefy/any-tunnel2.git", branch = "main" }
log = "0.4.14"
log4rs = "1.0.0"
libc = "0.2.109"
lazy_static = "1.4.0"
backtrace = "0.3.63"
core_affinity = "0.5.10"
scopeguard = "1.1.0"
toml = "0.5.8"
serde = "1.0.131"
tokio = { version = "1.14.0", features = ["full"] }
async-trait = "0.1.52"
regex = "1.5.4"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
rlimit = "0.6.2"
byteorder = "1.4.3"
byte = "0.2.6"
pin-project-lite = "0.2.7"
chrono = "0.4.19"
rand = "0.8.4"
structopt = "0.3.21"
async-channel = "1.6.1"

#quinn = "0.7.2"
quinn = "0.8.0"
#rustls = { version = "0.19", features = ["quic", "dangerous_configuration"]}
rustls = { version = "0.20", default-features = false, features = ["quic", "dangerous_configuration"]}
#rustls = { version = "0.20", default-features = false, features = ["quic"], optional = true }
tokio-rustls = "0.23.2"
#tokio-rustls = "0.22"
#webpki = "0.21.0"
webpki = { version = "0.22", default-features = false, optional = true }
rustls-pemfile = "0.2.1"

[dependencies.socket2]
version = "0.4.2"
features = ["all"]

[target."cfg(unix)".dependencies.jemallocator]
version = "0.3.2"

[target."cfg(windows)".dependencies.mimalloc]
version = "0.1.27"

[dependencies.async_executors]
version = "0.4.2"
#path = "./3rdparty/async_executors"
features = ["tokio_ct", "tokio_io", "tokio_timer"]

[dependencies.tokio-openssl]
version = "0.6.3"
optional = true

[dependencies.openssl]
version = "0.10.38"
optional = true

[dependencies.openssl-sys]
version = "0.9.71"
optional = true



[dev-dependencies]
directories-next = "2.0.0"
rcgen = "0.9.1"
pem = "1.0"
