[workspace]
resolver = "1"
members = ["any-base", "any-proxy", "any-tunnel", "any-tunnel2", "3rdparty/hyper-0.14.23"]
default-members = ["any-base", "any-proxy", "any-tunnel", "any-tunnel2", "3rdparty/hyper-0.14.23"]
exclude = [
    ".git",
    ".idea",
    "wasm",
    "wasm/http-in-headers",
    "wasm/http-filter-headers-pre",
    "wasm/http-filter-headers",
    "wasm/wit",
    "any-proxy/examples",
    "any-test",
    "any-example",
    "any-example/example",
    "any-ebpf",
]



[profile.dev]
opt-level = 0
codegen-units = 256
lto = "off"
incremental = true
debug = 1
split-debuginfo = "packed"
panic = "unwind"
overflow-checks = true
debug-assertions = true
rpath = false
strip = "none"


[profile.release]
opt-level = 3
codegen-units = 1
#这个特性开起来会导致rpm打包失败， deb正常
lto = "fat"
incremental = false
debug = 1
split-debuginfo = "packed"
panic = "unwind"
overflow-checks = false
debug-assertions = false
rpath = false
strip = "none"


#cargo build --profile bench-dev --no-default-features ...
[profile.bench-dev]
inherits = "release"
opt-level = 1
codegen-units = 256
lto = "off"
incremental = true
debug = 1
split-debuginfo = "packed"
panic = "unwind"
overflow-checks = true
debug-assertions = true
rpath = false
strip = "none"


