[package]
name = "any-base"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
debug = true
panic = "unwind"
incremental = true
strip = false
#opt-level = 0
#split-debuginfo = '...'  # Platform-specific.
#debug-assertions = true
#overflow-checks = true
#lto = false
#codegen-units = 256
#rpath = false

[profile.release]
debug = true
panic = "abort"
opt-level = 3
#这个特性开起来会导致rpm打包失败， deb正常
lto = false
codegen-units = 1
incremental = false
rpath = false
debug-assertions = false
overflow-checks = false
#性能调试用这个
#debug = true
#删除调试信息
strip = true


[features]
default = ["anyspawn-parking-lot"]
anyspawn-count = []
anyspawn-parking-lot = []
anyspawn-std-sync = []
anylock-time = []
parking_lot_features = ["parking_lot/deadlock_detection"]

[dependencies]
parking_lot = { version = "0.12.1", default-features = false }
anyhow = { git = "https://github.com/yefy/anyhow.git"}
awaitgroup = { git = "https://github.com/yefy/awaitgroup.git" }
tokio = { version = "1.38.0", features = ["full"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
lazy_static = "1.4.0"
log = "0.4"
libc = "0.2.109"
toml = "0.5.10"
log4rs = { git = "https://github.com/yefy/log4rs.git" }
bytes = "1.5.0"
async-trait = "0.1.52"
hashbrown = "0.11.2"
async-channel = "1.8.0"
scopeguard = "1.1.0"
dynamic-pool = "0.2.2"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
pin-project-lite = "0.2.9"
core_affinity = "0.7.6"
futures-core = "0.3.26"
async-recursion = "1.0.5"
mysql_common = "0.32.4"
linked-hash-map = "0.5.6"

[dev-dependencies]
serde_json = "1"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"