[package]
name = "any-proxy"
version = "1.0.0"
edition = "2021"
readme = "README.md"
exclude = ["test/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "anyproxy"
path = "src/bin/anyproxy.rs"

[[example]]
name = "single_threaded"
path = "examples/single_threaded.rs"

#run --no-default-features --features "anyproxy-rustls anyproxy-ebpf"
[features]
#default = ["anyproxy-openssl"]
default = ["anyproxy-rustls"]
#使用openssl加密
anyproxy-openssl = ["openssl-sys", "openssl", "tokio-openssl"]
#使用rustls加密
anyproxy-rustls = []
anyproxy-ebpf = ["libbpf-rs", "libbpf-cargo"]
anyproxy-reuseport = []
anyproxy-msg-verdict = []
anyproxy-write-block-time-ms = []
anydebug-error = ["anydebug", "anyerror"]
anydebug = []
anyerror = []



[profile.dev]
#incremental = false
debug = true
panic = "unwind"
#opt-level = 0
#split-debuginfo = '...'  # Platform-specific.
#debug-assertions = true
#overflow-checks = true
#lto = false
#incremental = true
#codegen-units = 256
#rpath = false

[profile.release]
debug = false
#debug = true
panic = "abort"
opt-level = 3
#这个特性开起来会导致rpm打包失败， deb正常
#lto = true
lto = false
codegen-units = 1
incremental = false
#性能调试用这个
#debug = true
#删除调试信息
#strip ./target/release/anyproxy

[dependencies]
any-base = {path = "../any-base"}
anyhow = {path = "../anyhow"}
awaitgroup = {path = "../awaitgroup"}
any-tunnel = {path = "../any-tunnel", features = ["anypool-dynamic-pool", "anyruntime-tokio-spawn-local"], default-features = false}
any-tunnel2 = {path = "../any-tunnel2", features = ["anyack", "anyruntime-tokio-spawn-local"], default-features = false}
async_executors = {path = "../async_executors", features = ["tokio_ct", "tokio_io", "tokio_timer"], default-features = false}
#quinn = {path = "../quinn-0.8.5"}
quinn = "0.9.3"
log = "0.4.17"
log4rs = "1.2.0"
libc = "0.2.139"
lazy_static = "1.4.0"
backtrace = "0.3.67"
core_affinity = "0.7.6"
scopeguard = "1.1.0"
toml = "0.5.10"
serde = "1.0.152"
tokio = { version = "1.24.1", features = ["full"], default-features = false}
async-trait = "0.1.61"
regex = "1.7.1"
futures-util = { version = "0.3.25", default-features = false, features = ["async-await", "sink", "std"] }
rlimit = "0.9.0"
byteorder = "1.4.3"
byte = "0.2.6"
pin-project-lite = "0.2.9"
chrono = "0.4.23"
rand = "0.8.5"
structopt = "0.3.26"
async-channel = "1.8.0"
serde_json = "1.0.91"
reqwest = "0.11.13"
rustls = { version = "0.20", default-features = false, features = ["quic", "dangerous_configuration"]}
tokio-rustls = "0.23.4"
webpki = { version = "0.22", default-features = false, optional = true }
rustls-pemfile = "1.0.2"
tempfile = "3.3.0"
syncpool = "0.1.6"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
#hyper = { version = "0.14.23", features = ["full"] }
hyper = {git = "https://github.com/hyperium/hyper", features = ["full"]}
dynamic-pool = "0.2.2"
zip = "0.6.3"
page_size = "0.5.0"

[dependencies.libbpf-rs]
version = "0.19.1"
optional = true

[build-dependencies.libbpf-cargo]
version = "0.13.1"
optional = true

[build-dependencies.zip]
version = "0.6.3"

[build-dependencies.anyhow]
path = "../anyhow"

[dependencies.socket2]
version = "0.4.2"
features = ["all"]

[target."cfg(unix)".dependencies.jemallocator]
version = "0.5.0"

[target."cfg(windows)".dependencies.mimalloc]
version = "0.1.34"

#[dependencies.async_executors]
#version = "0.6.0"
#features = ["tokio_ct", "tokio_io", "tokio_timer"]

[dependencies.tokio-openssl]
version = "0.6.3"
optional = true

[dependencies.openssl]
version = "0.10.38"
optional = true

[dependencies.openssl-sys]
version = "0.9.71"
optional = true



[dev-dependencies]
directories-next = "2.0.0"
rcgen = "0.10.0"
pem = "1.1.1"



