[package]
name = "any-proxy"
version = "3.0.0"
edition = "2021"
readme = "README.md"
exclude = ["test/*"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "anyproxy"
path = "src/bin/anyproxy.rs"

[[example]]
name = "single_threaded"
path = "examples/single_threaded.rs"

[[example]]
name = "any_tunnel_server"
path = "../any-tunnel/examples/server.rs"

[[example]]
name = "any_tunnel_client"
path = "../any-tunnel/examples/client.rs"

#run --no-default-features --features "anyproxy-rustls anyproxy-ebpf"
[features]
default = ["anyproxy-openssl"]
#default = ["anyproxy-rustls"]
#使用openssl加密
anyproxy-openssl = ["openssl-sys", "openssl", "tokio-openssl", "hyper-openssl"]
#使用rustls加密
anyproxy-rustls = []
anyproxy-ebpf = ["libbpf-rs", "libbpf-cargo"]
anyproxy-reuseport = []
anyproxy-msg-verdict = []
anyproxy-write-block-time-ms = []
anydebug-error = ["anydebug", "anyerror"]
anydebug = []
anyerror = []
anyspawn-count = []
anyio-file = []



[profile.dev]
debug = true
panic = "unwind"
incremental = true
strip = false
#opt-level = 0
#split-debuginfo = '...'  # Platform-specific.
#debug-assertions = true
#overflow-checks = true
#lto = false
#codegen-units = 256
#rpath = false

[profile.release]
debug = false
panic = "abort"
opt-level = 3
#这个特性开起来会导致rpm打包失败， deb正常
lto = false
codegen-units = 1
incremental = false
rpath = false
debug-assertions = false
overflow-checks = false
#性能调试用这个
#debug = true
#删除调试信息
strip = true

[dependencies]
any-base = {path = "../any-base", features = ["anyspawn-parking-lot"], default-features = false}
anyhow = {path = "../3rdparty/anyhow"}
awaitgroup = {path = "../3rdparty/awaitgroup"}
any-tunnel = {path = "../any-tunnel"}
any-tunnel2 = {path = "../any-tunnel2", features = ["anyack", "anyruntime-tokio-spawn"], default-features = false}
hyper = { path = "../3rdparty/hyper-0.14.23", features = ["full"] }
#hyper = { version = "0.14.23", features = ["full"] }
#hyper = {git = "https://github.com/hyperium/hyper", features = ["full"]}
#quinn = {path = "../quinn-0.8.5"}
quinn = "0.9.3"
log = "0.4.17"
log4rs = "1.2.0"
libc = "0.2.153"
lazy_static = "1.4.0"
backtrace = "0.3.67"
core_affinity = "0.7.6"
scopeguard = "1.1.0"
toml = "0.5.10"
serde = "1.0.152"
tokio = { version = "1.35.1", features = ["full"], default-features = false}
async-trait = "0.1.61"
regex = "1.10.2"
futures-util = { version = "0.3.29", default-features = false, features = ["async-await", "sink", "std"] }
rlimit = "0.9.0"
byteorder = "1.4.3"
byte = "0.2.6"
pin-project-lite = "0.2.9"
chrono = "0.4.23"
rand = "0.8.5"
structopt = "0.3.26"
async-channel = "2.1.1"
serde_json = "1.0.91"
reqwest = "0.11.13"
rustls = { version = "0.20", default-features = false, features = ["quic", "dangerous_configuration"]}
tokio-rustls = "0.23.4"
webpki = { version = "0.22", default-features = false, optional = true }
rustls-pemfile = "1.0.2"
tempfile = "3.3.0"
syncpool = "0.1.6"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
dynamic-pool = "0.2.2"
zip = "0.6.3"
page_size = "0.5.0"
tokio-tungstenite = "0.18.0"
#tokio-tungstenite = {path = "../tokio-tungstenite-0.18.0"}
http = "0.2.9"
hyper-rustls = "0.23.2"
bytes = "1.5.0"
base64 = "0.21.0"
parking_lot = "0.12.1"
linked_hash_set = "0.1"
once_cell = "1.0"
url = "2.3.1"
futures-core = "0.3.29"
md5 = "0.7.0"
time = "0.2"
httparse = "1.8.0"
radix_trie = "0.2.1"
crc32fast = "1.4.0"
fs_extra = "1.3.0"

clap = { version = "4.3.19", features = ["derive"] }
#wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "2ade3ad", features = ["component-model"] }
#wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "2ade3ad" }
#wasi-cap-std-sync = { git = "https://github.com/bytecodealliance/wasmtime", rev = "2ade3ad" }
wasmtime = { version = "17.0.2" , features = ["component-model"] }
wasmtime-wasi = { version = "17.0.2" }
wasi-cap-std-sync = { version = "17.0.2" }

[dependencies.httpdate]
version = "1.0"

[dependencies.libbpf-rs]
version = "0.20"
optional = true

[build-dependencies.libbpf-cargo]
version = "0.20"
optional = true

[build-dependencies.zip]
version = "0.6.3"

[build-dependencies.anyhow]
path = "../3rdparty/anyhow"

[build-dependencies.vergen]
version = "7.5.0"

[build-dependencies.wit-bindgen]
version = "0.21.0"

[build-dependencies.wit-bindgen-core]
version = "0.21.0"

[build-dependencies.wit-bindgen-rust-macro]
version = "0.21.0"

[build-dependencies.wit-bindgen-rust]
version = "0.21.0"

[build-dependencies.wit-parser]
version = "0.201.0"



[dependencies.wit-bindgen]
version = "0.21.0"

[dependencies.wit-bindgen-core]
version = "0.21.0"

[dependencies.wit-bindgen-rust-macro]
version = "0.21.0"

[dependencies.wit-bindgen-rust]
version = "0.21.0"

[dependencies.wit-parser]
version = "0.201.0"

[dependencies.socket2]
version = "0.4.2"
features = ["all"]

[dependencies.nix]
version = "0.27.1"
features = ["socket"]

[target."cfg(unix)".dependencies.jemallocator]
version = "0.5.0"

[target."cfg(windows)".dependencies.mimalloc]
version = "0.1.34"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"


[dependencies.hyper-openssl]
version = "0.9"
optional = true

[dependencies.tokio-openssl]
version = "0.6.3"
optional = true

[dependencies.openssl]
version = "0.10.38"
optional = true

[dependencies.openssl-sys]
version = "0.9.71"
optional = true



[dev-dependencies]
directories-next = "2.0.0"
rcgen = "0.10.0"
pem = "1.1.1"



