[package]
name = "wasm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
panic = "abort"
opt-level = 3
#这个特性开起来会导致rpm打包失败， deb正常
lto = false
codegen-units = 1
incremental = false
rpath = false
debug-assertions = false
overflow-checks = false
#性能调试用这个
#debug = true
#删除调试信息
strip = true


[dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = "0.21.0"
wit-bindgen = "0.21.0"
toml = "0.5.10"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.86"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:server"

[package.metadata.component.dependencies]

#[package.metadata.component.target.dependencies]
#"component:http-stream-request" = { path = "../wit" }
#"component:http-filter-headers" = { path = "../wit" }
